# Cristal-ollama-master

./: bot.html  main.css
Cristal-Ollama-master/: fineTuning.txt  pyproject.toml
Cristal-Ollama-master/src/: Embeddings_Generate.ipynb  main.py
Cristal-Ollama-master/src/DataBusiness/: __init__.py  collections_repository.py  index.py
Cristal-Ollama-master/src/FineTuning/: __init__.py
Cristal-Ollama-master/src/FineTuning/config/: __init__.py  training_args.py
Cristal-Ollama-master/src/FineTuning/data/: __init__.py  dataset.py  prepare_data.py
Cristal-Ollama-master/src/FineTuning/models/: __init__.py  llama_model.py  tokenizer.py
Cristal-Ollama-master/src/FineTuning/scripts/: evaluate.py  game_recommendation_queries_unique.csv  inference.py  queries.py  train.py
Cristal-Ollama-master/src/FineTuning/utils/: helpers.py
Ollama-SV-master/: README.md  pyproject.toml  requirements.txt
Ollama-SV-master/src/: .env  generate_embeddings.py  main.py  model.pth  vectorizer.joblib
Ollama-SV-master/src/DataBusiness/: __init__.py  collections_repository.py  index.py  preprocess.py
Ollama-SV-master/src/LanguageModel/: __init__.py  embeddings.py  recommendation_model.py  vector_store.py  vectorizer.joblib
Ollama-SV-master/src/Tests/: test_cases.py  test_connection.py  test_dataframe.py  test_returning.py
static/: main.css  main.js
