[tool.poetry]
name = "meu-ollama"
version = "0.1.0"
description = ""
authors = ["GuiMcs00 <guilherme.amaral2004@gmail.com>"]
readme = "README.md"
packages = [
    {include = "src", from = "."},
    {include = "DataBusiness", from = "src"},
    {include = "Tests", from = "src"},
    {include = "LanguageModel", from = "src"}

]

[tool.poetry.dependencies]
python = "^3.12"
pymongo = "^4.7.2"
python-dotenv = "^1.0.1"
pytest = "^8.2.0"
ollama = "^0.2.0"
pandas = "^2.2.2"
numpy = "^1.26.4"
scikit-learn = "^1.4.2"
torch = "^2.3.0"
torchvision = "^0.18.0"
torchaudio = "^2.3.0"
flask = "^3.0.3"
requests = "^2.32.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
